# osd-vcpkg-test

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.bat  vcpkg.json
cmake/: FindOpenSubdiv.cmake
